--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,7 +1,7 @@
 backend:
   name: git-gateway
   branch: main
-  identity_url: https://your-site.netlify.app/.netlify/identity
+  identity_url: https://auctionaisle.netlify.app/.netlify/identity
   role: owner
 
 media_folder: "static/img/uploads"
